--- a/style.css
+++ b/style.css
@@ -16,16 +16,16 @@ img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 20%;
-    height: 20%;
+    width: fit-content;
+    height: fit-content;
     border-radius: 5%;
     padding: 5px;
     border-color: gray;
     }
 #botao2 {
     position: absolute;
-    width: 10%;
-    height: 10%;
+    width: fit-content;
+    height: fit-content;
     border-radius: 5%;
     padding: 5px;
     border-color: gray;
